# duplicate-files

./: .gitignore  README.md  WORKFLOW.md  dupfinder.py  pyproject.toml
utils/: logger.py
