[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "duplicate-finder"
version = "1.0.0"
description = "A command-line tool to find and optionally remove duplicate files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DjTj", email = "jekl.tobias@t-online.de"}
]
keywords = ["duplicates", "files", "cli", "images", "music"]
dependencies = [
    "tqdm>=4.0",
    "mutagen>=1.45",
    "Pillow>=9.0",
]

[project.scripts]
dupfinder = "dupFinder:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "cli*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]